--- a/homeworks/hw1/index.html
+++ b/homeworks/hw1/index.html
@@ -1,6 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <body>
-        Homework 1
-    </body>
-</html>
+
+<head>
+    <title>
+        Katy-Nguyen
+    </title>
+</head>
+
+<body>
+    <header>
+        <h1><strong>Katy Nguyen</strong></h1>
+        <h2> <em>Third-year Cognitive Science Major</em></h2>
+    </header>
+    <p>
+        Hi and welcome to my page! I'm passionate about design and all things creative, In my free time, I like to crochet, craft bead charms, and explore new cafes in the area. I'm taking this decal to learn more about web design and development because I want to build my own website.
+    </p>
+    <header>
+        <h2>Places I like to eat in Berkeley:</h2>
+    </header>
+    <ul>
+        <li>Noodle Dynasty</li>
+        <li>Marugame Udon</li>
+        <li>Mind Coffee</li>
+      </ul>
+    <img src="assets/img/katy.png"/>
+    <header>
+        <h2>My favorite website:</h2>
+    </header>
+    <a href="https://www.baggu.com/">Click here</a>
+    <ul>
+        <li>Reading the article, I learned that design should be analyzed to understand the intention behind the process and how it is able to solve a specific problem that exists in the world. I liked how the article broke down the different components to look out for such as hirearchy and what audience the product is designed for. </li>
+        <li>My favorite part was how they broke down the app layout and noted down observations to look for. This part explains why a specific language choice is made to initate an certain action</li>
+        <li>"Know the rules, so you can break em"</li>
+        <li>This article was a 10/10 read!</li>
+    </ul>
+      
+</body>
