--- a/homeworks/hw3/index.html
+++ b/homeworks/hw3/index.html
@@ -1,6 +1,69 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+	<head>
+		<!-- PROBLEM 0:
+		Link the CSS stylesheet called style.css found in the assets/css folder -->
+		<link rel="stylesheet" type="text/css" href="assets/css/initial.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	</head>
+	<body>
+	<div id="content">
+		<div id="navbar">
+			<div class="navbar-item">Home</div>
+			<div class="navbar-item">Discover</div>
+			<div class="navbar-item">Profile</div>
+		</div>
+		<div id="header">
+			<div id="profile-pic">
+				<img id="pfp" src="assets/img/katy.png">
+			</div>
+			<div id="information">
+				<div id="username">katynguyen</div>
+				<div id="follow-button">+ Follow</div>
+				<div id="about">
+					I like matcha lattes, crocheting, and collecting smiskis. 
+				</div>
+			</div>
+		</div>
+		<div id="pictures">
+			<div class="row">
+				<div class="item">
+					<img src="assets/img/doyoung.jpg">
+				</div>
+				<div class="item">
+					<img src="assets/img/beach.jpg">
+				</div>
+				<div class="item">
+					<img src="assets/img/haru.jpg">
+				</div>
+			</div>
+			<div class="row">
+				<div class="item">
+					<img src="assets/img/elevator.jpg">
+				</div>
+				<div class="item">
+					<img src="assets/img/photobooth.jpg">
+				</div>
+				<div class="item">
+					<img src="assets/img/green.jpg">
+				</div>
+			</div> 
+			<div class="row">
+				<div class="item">
+					<img src="assets/img/matcha.jpg">
+				</div>
+				<div class="item">
+					<img src="assets/img/train.jpg">
+				</div>
+				<div class="item">
+					<img src="assets/img/jisung.jpg">
+				</div>
+			</div>
+		</div>
+	</div>
+	<a href="design_responses.html" id="design">Click to view design responses</a>
+	</body>
 </html>
