--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,6 +1,83 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <body>
-        MIDTERM
-    </body>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Sodoi</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'DM Sans', sans-serif;
+        }
+    </style>
+    <style>
+            body {
+                font-family: 'alga-variable', sans-serif;
+            }
+    </style>
+
+</head>
+<body>
+    <div id="content">
+        <div id="navbar">
+            <div class="navbar-item"><a href="index.html"><img id="logo" src="assets/img/sodoi.png"></a></div>
+            <div class="navbar-item"><a href="menu.html">Menu</a></div>
+			<div class="navbar-item">Store</div>
+			<div class="navbar-item">Company</div>
+            <div class="navbar-item">Events</div>
+            <div class="navbar-item"><img id="icons" src="assets/img/cart.png"></div>
+            <div class="navbar-item"><img id="icons" src="assets/img/user.png"></div>
+    </div>
+    <div>
+        <div id="home">
+            <heading>
+                <div class="home-heading">
+                    Inspiring dreams, delivering coffee. 
+                </div>
+            </heading>
+            <body>
+                <div class="home-display">
+                    <div class="home-image">
+                        <img src="assets/img/latte.jpg">
+                    </div>
+                    <div class="home-content">
+                        <div class="home-subheading">
+                            Our Beginnings
+                            <img src="assets/img/espressobean.jpg">
+                        </div>
+                        <div class="beginnings">
+                            <p>Like many endeavors, the genesis of Sodoi spans back centuries. Jae Chung, Bob Baldwin, and Robert Hensley have nearly 100 years of combined experience in coffee trading, roasting, blending and serving. In addition, their mentors have passed knowledge gained from a lifetime in the coffee industry. Sodoi stands firmly on a foundation of 200 years combined industry expertise. Our knowledgeable, consumer-oriented and skilled team provides you with the best quality product and customer service. </p>
+                            <p> Sodoi’s deeply rooted history extends back generations. Bob and Robert have been honored to call Alfred Peet (founder of Peet’s Coffee & Tea) a mentor and friend. In addition to acquiring the vast knowledge and experience by working with Mr. Peet, Bob and Robert worked for Probat Burns, a German roasting company founded in 1864. Together, they built, restored, installed, and trained on roasting equipment, which extended from vintage machines of the early 20th century to the most refined and advanced roasting equipment built today.</p>
+                            <p>All of us at Sodoi are blessed to stand on the shoulders of giants in the industry who have come before and helped us discern between what adds value to our customer’s experience and what is merely the latest fad or simple shortcut and pretense to quality. These past masters of the art and science of coffee include dedicated professionals across the full spectrum of producing great coffee, from growers and millers, to roasters and brew masters. We give thanks to all the efforts of those who have blazed the trail before us.</p>
+                        </div>
+                        <div class="bean">
+                        <img src="assets/img/beans.jpg">
+                        </div>
+                    </div>
+                </div>
+            </body>
+        </div>
+    </div>
+    <div id="footer">
+        <div class="footer-item"> 
+            <div class="contact"> Contact Us
+            </div>
+        </div>
+        <div class="footer-item">
+            <p>
+                Location:
+            </p>
+            <p>
+                2438 Durant Ave, Berkeley, CA 94704
+            </p>
+        </div>
+        <div class="footer-item">Shipping</div>
+        <div class="footer-item">Wholesale</div>
+        <div class="footer-item">Privacy</div>
+    </div>
+</body>
+
+
 </html>
