--- a/final/index.html
+++ b/final/index.html
@@ -1,6 +1,42 @@
 <!DOCTYPE html>
+
 <html>
+
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <title>mood-to-do</title>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Millimetre&display=swap" rel="stylesheet">
+        <style>
+            body {
+                font-family: 'DM Sans', sans-serif;
+                margin: 0;
+                padding: 0;
+                background-color: #F9F7FF;
+            }
+        </style>
+    </head>
     <body>
-        FINAL
+        <heading>
+            <div class="landing-heading">
+                mood-to-do
+            </div>
+        </heading>
+        <div class="landing-image">
+            <div class="image-wrapper">
+                <img src="assets/img/Happy.png">
+            </div>
+            <div class="image-wrapper">
+                <img src="assets/img/Okay.png">
+            </div>
+            <div class="image-wrapper last-image">
+                <img src="assets/img/Sad.png">
+            </div>
+        </div>
+        <div class="click-start">
+            <a href="home.html">click to start</a>
+        </div>
     </body>
+
 </html>
